grammar.txt
program         : statement_list

statement_list  : statement statement_list
                | statement

statement       : assignment
                | print_statement
                | comparison

assignment      : IDENTIFIER ASSIGN comparison

print_statement : PRINT LPAREN comparison RPAREN

comparison      : expr ((LESS | GREATER) expr)?

expr            : term ((PLUS | MINUS) term)*

term            : power ((MULTIPLY | DIVIDE) power)*

power           : factor (POWER factor)*

factor          : (PLUS | MINUS) factor
                | NUMBER
                | IDENTIFIER
                | STRING
                | LPAREN comparison RPAREN
